<resources>
    <string name="app_name">BLITHE</string>
    <string name="BLITHE">BLITHE</string>
    <string name="GetStarted">Get Started</string>
    <string name="hello_gamers">HELLO GAMERS</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="controller">controller</string>
    <string name="blured">Blured</string>
    <string name="blury_line">blury_line</string>
    <string name="Blithe">BLITHE</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="usernamein">Username</string>
    <string name="username_or_e_mail">Username or E-mail</string>
    <string name="passwordin">Password</string>
    <string name="choose_your_favorite_categories">Choose your favorite categories</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="mmo">MMO</string>
    <string name="indie">Indie</string>
    <string name="horror">Horror</string>
    <string name="fighting">Fighting</string>
    <string name="exploration">Exploration</string>
    <string name="casual">Casual</string>
    <string name="cross_platform">Cross Platform</string>
    <string name="adventure">Adventure</string>
    <string name="action">Action</string>
    <string name="open_world">Open World</string>
    <string name="platformer">Platformer</string>
    <string name="puzzle">Puzzle</string>
    <string name="space">Space</string>
    <string name="stealth">Stealth</string>
    <string name="sports">Sports</string>
    <string name="vr">VR</string>
    <string name="turn_based">Turn Based</string>
    <string name="tower_defense">Tower Defense</string>
    <string name="survival">Survival</string>
    <string name="strategy">Strategy</string>
    <string name="search">Search</string>
    <string name="country">Country</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_profile">ProfileAct</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>