<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Blithe"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14pt"
        android:textStyle="bold|italic"
        android:shadowColor="#BF40BF"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="23dp"
        app:layout_constraintHorizontal_bias="0.033"
        android:background="@drawable/alines"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="38dp"
        android:layout_height="46dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/allo7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PROFILE"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        android:textStyle="bold|italic"
        android:shadowColor="#BF40BF"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:outlineAmbientShadowColor="#BF40BF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11"
        tools:ignore="DuplicateIds" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="347dp"
        android:layout_height="20dp"
        android:src="@drawable/whiteline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="180dp"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="347dp"
        android:layout_height="20dp"
        android:src="@drawable/whiteline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="260dp"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="347dp"
        android:layout_height="20dp"
        android:src="@drawable/whiteline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="350dp"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="347dp"
        android:layout_height="20dp"
        android:src="@drawable/whiteline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="440dp"
        tools:ignore="MissingConstraints" />
    <ImageView
        android:id="@+id/imageView33"
        android:layout_width="347dp"
        android:layout_height="20dp"
        android:src="@drawable/whiteline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="530dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="155dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="235dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="325dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="415dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textColor="#FFFFFF"
        android:textSize="10pt"
        android:textStyle="normal"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="505dp"
        tools:ignore="MissingConstraints" />
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="420dp"
        android:layout_height="66dp"
        android:layout_marginBottom="0dp"
        android:background="#BF40BF"
        android:shadowColor="#000000"
        android:shadowDx="4"
        android:shadowDy="8"
        android:shadowRadius="5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/home"
        app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>